# django-improved-user

./: .bumpversion.cfg  .coveragerc  .editorconfig  .flake8  .gitignore  .ignore  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .prettierrc.toml  .pylintrc  .pyup.yml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  codecov.yml  doc-requirements.txt  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/workflows/: check-project.yml  define-labels.yml  publish-package.yml  run-project-tests.yml  run-tests.yml
docs/: Makefile  admin_usage.rst  conf.py  create_custom_user_with_mixins.rst  data_migrations.rst  email_warning.rst  index.rst  integration.rst  make.bat  quickstart.rst  quickstart_contrib.rst  rationale.rst  select_configuration_method.rst  testing.rst
docs/reference/: factories.rst  forms.rst  models.rst
docs/source/: admin.rst  factories.rst  forms.rst  improved_user.rst  managers.rst  mixin_forms.rst  mixin_models.rst  model_mixins.rst  models.rst  modules.rst
example_extension_project/: .coveragerc  manage.py  requirements.txt
example_extension_project/config/: settings.py  urls.py  wsgi.py
example_extension_project/user_extension/: admin.py  apps.py  factories.py  forms.py  models.py  tests.py
example_integration_project/: .coveragerc  categories.json  confusables.json  manage.py  requirements.txt
example_integration_project/config/: settings.py  urls.py  wsgi.py
example_integration_project/user_integration/: apps.py  tests.py  urls.py
example_project/: categories.json  confusables.json  requirements.txt
example_project/config/: settings.py  urls.py  wsgi.py
example_project/user_integration/: tests.py  urls.py
example_replacement_project/: .coveragerc  manage.py  requirements.txt
example_replacement_project/config/: settings.py  urls.py
example_replacement_project/user_replacement/: apps.py  models.py  tests.py
improved_user/: __init__.py  apps.py  models.py
improved_user/fixtures/: authtestdata.json
improved_user/migrations/: 0001_initial.py
improved_user/tests/: test_auth_backends.py  test_forms.py  (+1 more)
simpleuser/: admin.py  forms.py  models.py
tests/: test_admin.py  test_auth_backends.py  test_basic.py  test_factories.py  test_forms.py  test_management.py  test_managers.py  test_models.py  test_signals.py  urls.py
(+35 files in other folders)
