[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=
    src/*/migrations/*,
inline-quotes = single
max-complexity = 10
max-line-length = 79
[metadata]
description-file = README.rst
[pep8]
# https://pep8.readthedocs.org/en/latest/
# W503 raised if operators are after line break
ignore = W503
